--- a/hmi/pom.xml
+++ b/hmi/pom.xml
@@ -76,7 +76,14 @@
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+            <version>3.0.2</version>
+            <configuration>
+              <archive>
+                <manifest>
+                  <mainClass>com.hmi.router.Application</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
